# django-rest-framework-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: claude.yml
demo/: README.md  manage.py
demo/blog/: admin.py  models.py  permissions.py  serializers.py  views.py
demo/blog/management/commands/: setup_test_auth.py
demo/blog/migrations/: 0001_initial.py  0002_customer.py  0003_order_orderitem.py  0004_post_author.py  0005_post_category.py
demo/demo/: settings.py  urls.py
djangorestframework_mcp/: __init__.py  apps.py  decorators.py  registry.py  schema.py  settings.py  test.py  types.py  urls.py  views.py
external-docs/: CLAUDE.md  json-rpc.md
external-docs/mcp-protocol/: 2025-06-18.schema.json  architecture.md  build-a-client-quickstart.md  build-a-server-quickstart.md  client-concepts.md  lifecycle-initialize.md  server-concepts.md  tools.md  versioning.md
internal-docs/: CLAUDE.md  HISTORICAL_CONTEXT.md  PRD.md
internal_docs/: CLAUDE.md  HISTORICAL_CONTEXT.md  RESPONSE_SCHEMAS.md
source-code-of-dependencies/: CLAUDE.md
src/: CLAUDE.md
test-app/: CLAUDE.md
tests/: CLAUDE.md  conftest.py  factories.py  models.py  serializers.py  test_decorators.py  test_integration.py  test_json_rpc_compliance.py  test_list_serializers.py  test_mcp_views.py  test_registry.py  test_regression.py  test_response_schemas.py  test_schema.py  test_settings.py  test_test_utilities.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_add_relationship_models.py
