[metadata]
license_files = LICENSE.md

[tool:pytest]
addopts = --tb=short --strict-markers -ra
testpaths = tests
python_files = test*.py
python_classes = Test*
python_functions = test_*

[coverage:run]
source = djangorestframework_mcp
branch = true

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
show_missing = true